; ModuleID = '/home/carl/AnghaBench/linux/drivers/clocksource/extr_timer-npcm7xx.c_npcm7xx_timer_oneshot.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clocksource/extr_timer-npcm7xx.c_npcm7xx_timer_oneshot.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clock_event_device = type { i32 }
%struct.timer_of = type { i32 }

@NPCM7XX_REG_TCSR0 = common dso_local global i64 0, align 8
@NPCM7XX_Tx_OPER = common dso_local global i32 0, align 4
@NPCM7XX_START_ONESHOT_Tx = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.clock_event_device*)* @npcm7xx_timer_oneshot to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @npcm7xx_timer_oneshot(%struct.clock_event_device* %0) #0 {
  %2 = alloca %struct.clock_event_device*, align 8
  %3 = alloca %struct.timer_of*, align 8
  %4 = alloca i32, align 4
  store %struct.clock_event_device* %0, %struct.clock_event_device** %2, align 8
  %5 = load %struct.clock_event_device*, %struct.clock_event_device** %2, align 8
  %6 = call %struct.timer_of* @to_timer_of(%struct.clock_event_device* %5)
  store %struct.timer_of* %6, %struct.timer_of** %3, align 8
  %7 = load %struct.timer_of*, %struct.timer_of** %3, align 8
  %8 = call i64 @timer_of_base(%struct.timer_of* %7)
  %9 = load i64, i64* @NPCM7XX_REG_TCSR0, align 8
  %10 = add nsw i64 %8, %9
  %11 = call i32 @readl(i64 %10)
  store i32 %11, i32* %4, align 4
  %12 = load i32, i32* @NPCM7XX_Tx_OPER, align 4
  %13 = xor i32 %12, -1
  %14 = load i32, i32* %4, align 4
  %15 = and i32 %14, %13
  store i32 %15, i32* %4, align 4
  %16 = load i32, i32* @NPCM7XX_START_ONESHOT_Tx, align 4
  %17 = load i32, i32* %4, align 4
  %18 = or i32 %17, %16
  store i32 %18, i32* %4, align 4
  %19 = load i32, i32* %4, align 4
  %20 = load %struct.timer_of*, %struct.timer_of** %3, align 8
  %21 = call i64 @timer_of_base(%struct.timer_of* %20)
  %22 = load i64, i64* @NPCM7XX_REG_TCSR0, align 8
  %23 = add nsw i64 %21, %22
  %24 = call i32 @writel(i32 %19, i64 %23)
  ret i32 0
}

declare dso_local %struct.timer_of* @to_timer_of(%struct.clock_event_device*) #1

declare dso_local i32 @readl(i64) #1

declare dso_local i64 @timer_of_base(%struct.timer_of*) #1

declare dso_local i32 @writel(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
